# bhAI_voicebot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Procfile  README.md  Voice2Voice Final - Tracker(V2V).csv  nixpacks.toml  pyproject.toml  railpack.json  railway.json  requirements.txt  source_of_truth_transcriptions.xlsx  twilio_2FA_recovery_code.txt
.github/: PULL_REQUEST_TEMPLATE.md
benchmarking/: BENCHMARKING.md  EC2_SETUP.md  README.md  review_app.py  run_benchmark.sh  transliteration.py
data/: README.md  Voice2Voice Final - Tracker(V2V).csv  conversations.db-shm  conversations.db-wal  request_queue.db-shm  request_queue.db-wal  sarvam_stt_review.csv  transcription_tracker.csv
docs/: SETUP_FOR_TINY.md  review_instructions.md
eval/: README.md  run_eval.py
knowledge_base/: README.md
notebooks/: stt_benchmarking.ipynb
scripts/: add_transcriptions_to_csv.py  backfill_nudge_history.py  cleanup.py  comprehensive_audit.py  extract_profiles.py  gmail_oauth_setup.py  persona_sim.py  probe_kb_router.py  recover_webchat.py  register_telegram_webhook.py  replay_audit_through_dev.py  run_proactive_dry_run.py  setup_sharepoint_sync.sh  sharepoint_batch_transcribe.py  simulate_v15_nudges.py  smoke_llm.py  smoke_test_nanobanana.py  spike_structured_output.py  sync_sharepoint.sh  v2_thread_replay.py  validate_haiku_router.py  validate_llm_router.py
tests/: conftest.py  test_faq_cache.py  test_llm_base.py  test_memory.py  test_security.py  test_webhook.py
voice_poc/: .env.example  README.md  pyproject.toml
voice_poc/company_context/: company_context.md  escalation_policy.md  style_guide.md
voice_poc/data/sample_audio/: example_3.opus  example_4_pardhi.m4a
voice_poc/scripts/: run_demo.py  whatsapp_webhook.py
voice_poc/src/: audio_utils.py  config.py  llm_openai.py  pipeline.py  sarvam_stt.py  sarvam_tts.py  whatsapp_client.py
(+235 files in other folders)
